screen captures and others
- Diagram
- Screen captures
- Fonts problem solved

--- a/web con plantilla final/css/style.css
+++ b/web con plantilla final/css/style.css
@@ -43,7 +43,7 @@ h1,h2, h3, h4, h5, h6 {
 	font-family:'Roboto', sans-serif;
 	font-weight:700;
 	line-height:1.1em;
-	color: #fff;
+	color: #423b3b;
 	margin-bottom: 20px;
 }
 
