Proves with maven
Starts with maven

--- a/WADWolfram/src/main/resources/templates/blog.html
+++ b/WADWolfram/src/main/resources/templates/blog.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Wolfram.org" />
     <!-- css -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="plugins/flexslider/flexslider.css" rel="stylesheet" media="screen" />
-    <link href="css/cubeportfolio.min.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/plugins/flexslider/flexslider.css" rel="stylesheet" media="screen" />
+    <link href="/css/cubeportfolio.min.css" rel="stylesheet" />
+    <link href="vcss/style.css" rel="stylesheet" />
 
     <!-- Theme skin -->
-    <link id="t-colors" href="skins/default.css" rel="stylesheet" />
+    <link id="t-colors" href="/skins/default.css" rel="stylesheet" />
 
     <!-- boxed bg -->
-    <link id="bodybg" href="bodybg/bg1.css" rel="stylesheet" type="text/css" />
+    <link id="bodybg" href="/bodybg/bg1.css" rel="stylesheet" type="text/css" />
 
     <!-- =======================================================
     Author: Group13. 2017
@@ -37,22 +37,22 @@
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="199" height="52" /></a>
+                            <a class="navbar-brand" href="index.html"><img src="/img/logo.png" alt="" width="199" height="52" /></a>
                         </div>
                         <div class="navbar-collapse collapse ">
                             <ul class="nav navbar-nav">
-                                <li><a href="index.html">Inicio</a></li>
-                                <li><a href="projects.html">Proyectos</a></li>
+                                <li><a href="/index.html">Inicio</a></li>
+                                <li><a href="/projects.html">Proyectos</a></li>
 
-                                <li class="active"><a href="blog.html">Noticias</a></li>
+                                <li class="active"><a href="/blog.html">Noticias</a></li>
 
-                                <li><a href="contact.html">Contacto</a></li>
-                                <li><a href="about.html">Sobre sus desarrolladores</a></li>
+                                <li><a href="/contact.html">Contacto</a></li>
+                                <li><a href="/about.html">Sobre sus desarrolladores</a></li>
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="register.html">Únete</a></li>
-                                        <li><a href="login.html">Inicia sesión</a></li>
+                                        <li><a href="/register.html">Únete</a></li>
+                                        <li><a href="/login.html">Inicia sesión</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -65,7 +65,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                             <br><br><br>
+                            <br>
+                            <br>
+                            <br>
                             <!--               <ul class="breadcrumb">
                            <li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
                                 <li><a href="projects.html">Proyectos</a></li>
@@ -87,7 +89,7 @@
                                 <div class="post-heading">
                                     <h3><a>¿En qué consiste el síndrome de Wolfram?</a></h3>
                                 </div>
-                                <img src="fotos/libro.jpg" alt="" class="img-responsive" />
+                                <img src="/fotos/libro.jpg" alt="" class="img-responsive" />
                             </div>
                             <p>El síndrome de Wolfram (SW) es una rara y compleja enfermedad neurodegenerativa progresiva, cuya prevalencia estimada es de 1/770.000 en Reino Unido y aún desconocida en España. El SW también se conoce por el acrónimo anglosajón DIDMOAD: diabetes insípida (DI), diabetes mellitus (DM), atrofia óptica (OA) y sordera neurosensorial (D). Esta enfermedad puede acompañarse también con alteraciones del tracto urinario, sistema nervioso central y atrofia gonadal. Su curso degenerativo progresivo ocasionará que los pacientes desarrollen la mayoría de las complicaciones de la enfermedad siendo, por tanto, una patología altamente discapacitante que implica devastadoras consecuencias tanto en la esfera física como psicológica y social. El fallecimiento suele producirse en la tercera o cuarta década de la vida.</p>
                             <p>La baja prevalencia del SW propicia la escasez de estudios y el conocimiento limitado de este síndrome tanto desde el punto de vista clínico como de los mecanismos etiopatogénicos implicados. El análisis de los datos clínicos recogidos hasta la fecha y el seguimiento multidisciplinar con un abordaje integral de los pacientes con SW nos permitirá obtener datos clínico-epidemiológicos fundamentales para definir el fenotipo, el curso evolutivo, y los factores pronósticos que ayudarán a un mejor manejo de la enfermedad y de sus complicaciones, preservando en la medida de lo posible el bienestar y la calidad de vida de estos pacientes y familiares.</p>
@@ -105,7 +107,7 @@
                                 <div class="post-heading">
                                     <h3><a>Actividades realizadas por la asociación</a></h3>
                                 </div>
-                                <img src="fotos/medicos.jpg" alt="" class="img-responsive" />
+                                <img src="/fotos/medicos.jpg" alt="" class="img-responsive" />
                             </div>
                             <ol>
                                 <li>Acogida, detección y evaluación de la persona afectada por el Síndrome de Wolfram y su familia.</li>
@@ -136,7 +138,7 @@
                                 <div class="post-heading">
                                     <h3><a>Anulación de la unidad multidisciplinar de Wolfram</a></h3>
                                 </div>
-                                <img src="fotos/noticia.jpg" alt="" class="img-responsive" />
+                                <img src="/fotos/noticia.jpg" alt="" class="img-responsive" />
                             </div>
                             <div class="bottom-article">
                                 <ul class="meta-post">
@@ -278,20 +280,20 @@
     <!-- javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/modernizr.custom.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="plugins/flexslider/jquery.flexslider-min.js"></script>
-    <script src="plugins/flexslider/flexslider.config.js"></script>
-    <script src="js/jquery.appear.js"></script>
-    <script src="js/stellar.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/uisearch.js"></script>
-    <script src="js/jquery.cubeportfolio.min.js"></script>
-    <script src="js/google-code-prettify/prettify.js"></script>
-    <script src="js/animate.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/modernizr.custom.js"></script>
+    <script src="/js/jquery.easing.1.3.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/plugins/flexslider/jquery.flexslider-min.js"></script>
+    <script src="/plugins/flexslider/flexslider.config.js"></script>
+    <script src="/js/jquery.appear.js"></script>
+    <script src="/js/stellar.js"></script>
+    <script src="/js/classie.js"></script>
+    <script src="/js/uisearch.js"></script>
+    <script src="/js/jquery.cubeportfolio.min.js"></script>
+    <script src="/js/google-code-prettify/prettify.js"></script>
+    <script src="/js/animate.js"></script>
+    <script src="/js/custom.js"></script>
 
 
 </body>
