--- a/WADWolfram/src/main/resources/templates/about.html
+++ b/WADWolfram/src/main/resources/templates/about.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Wolfram.org" />
     <!-- css -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="plugins/flexslider/flexslider.css" rel="stylesheet" media="screen" />
-    <link href="css/cubeportfolio.min.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/plugins/flexslider/flexslider.css" rel="stylesheet" media="screen" />
+    <link href="/css/cubeportfolio.min.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
 
     <!-- Theme skin -->
-    <link id="t-colors" href="skins/default.css" rel="stylesheet" />
+    <link id="t-colors" href="/skins/default.css" rel="stylesheet" />
 
     <!-- boxed bg -->
-    <link id="bodybg" href="bodybg/bg1.css" rel="stylesheet" type="text/css" />
+    <link id="bodybg" href="/bodybg/bg1.css" rel="stylesheet" type="text/css" />
 
     <!-- =======================================================
     Author: Group13. 2017
@@ -58,14 +58,14 @@
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
+                            <a class="navbar-brand" href="index.html"><img src="/img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
                         </div>
                         <div class="navbar-collapse collapse ">
                             <ul class="nav navbar-nav">
-                                <li><a href="index.html">Inicio</a></li>
-                                <li><a href="projects.html">Proyectos</a></li>
+                                <li><a href="/index.html">Inicio</a></li>
+                                <li><a href="/projects.html">Proyectos</a></li>
 
-                                <li><a href="blog.html">Noticias</a></li>
+                                <li><a href="/blog.html">Noticias</a></li>
                                 <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
                                 <li><a href="contact.html">Contacto</a></li>
@@ -73,8 +73,8 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="register.html">Únete</a></li>
-                                        <li><a href="login.html">Inicia sesión</a></li>
+                                        <li><a href="/register.html">Únete</a></li>
+                                        <li><a href="/login.html">Inicia sesión</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -102,74 +102,74 @@
                             <section>
                                 <br>
                                 <h4>Sus desarrolladores</h4>
-      <ul>
-         <h5>Juan Antonio Parés Ponce, estudiante del grado en Ingeniería de Software</h5>
-         <h5>Karen Príncipe Aguirre, estudiante del doble grado en Ingeniería de Software y Matemáticas</h5>
-         <h5>Gabriel Rubio Palacios, estudiante del doble grado en Ingeniería de Software e Informática</h5>
-         <h5>Sandra Timón Mayo, estudiante del grado en Ingeniería de Software</h5>
-      </ul>
-   </section>
+                                <ul>
+                                    <h5>Juan Antonio Parés Ponce, estudiante del grado en Ingeniería de Software</h5>
+                                    <h5>Karen Príncipe Aguirre, estudiante del doble grado en Ingeniería de Software y Matemáticas</h5>
+                                    <h5>Gabriel Rubio Palacios, estudiante del doble grado en Ingeniería de Software e Informática</h5>
+                                    <h5>Sandra Timón Mayo, estudiante del grado en Ingeniería de Software</h5>
+                                </ul>
+                            </section>
 
 
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    </section>
+        </section>
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-3 col-lg-3">
-                    <div class="widget">
-                        <h4>Estamos en: </h4>
-                        <address>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-3 col-lg-3">
+                        <div class="widget">
+                            <h4>Estamos en: </h4>
+                            <address>
 					<strong>Asociación Española para la Investigación y Ayuda al Síndrome de Wolfram</strong><br>
 					 C/ Picadilly, nº 7, Almería, Andalucía</address>
-                        <p>
-                            <i class="icon-phone"></i>653 115 307
-                            <br>
-                            <i class="icon-envelope-alt"></i> email@domainname.com
-                        </p>
+                            <p>
+                                <i class="icon-phone"></i>653 115 307
+                                <br>
+                                <i class="icon-envelope-alt"></i> email@domainname.com
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-3 col-lg-3">
-                    <div class="widget">
-                        <h4>Información</h4>
-                        <ul class="link-list">
-                            <li><a href="#">Términos y condiciones</a></li>
-                            <li><a href="#">Política de privacidad</a></li>
-                            <li><a href="contact.html">Contáctanos</a></li>
-                        </ul>
-                    </div>
+                    <div class="col-sm-3 col-lg-3">
+                        <div class="widget">
+                            <h4>Información</h4>
+                            <ul class="link-list">
+                                <li><a href="#">Términos y condiciones</a></li>
+                                <li><a href="#">Política de privacidad</a></li>
+                                <li><a href="contact.html">Contáctanos</a></li>
+                            </ul>
+                        </div>
 
-                </div>
-                <div class="col-sm-3 col-lg-3">
-                    <div class="widget">
-                        <h4>Páginas relacionadas</h4>
-                        <ul class="link-list">
-                            <li><a href="http://www.orpha.net/consor/cgi-bin/OC_Exp.php?lng=ES&Expert=3463.0">ORPHANET – Síndrome de Wolfram</a></li>
-                            <li><a href="http://www.association-du-syndrome-de-wolfram.org/faire-un-don.html">Asociación Francesa del síndrome de Wolfram</a></li>
-                            <li><a href="http://wolframsyndrome.dom.wustl.edu/">Universidad de Washington en St. Louis – Síndrome de Wolfram</a></li>
-                            <li><a href="http://aswolfram.org/">Asociación Española para la Investigación y Ayuda al síndrome de Wolfram</a></li>
-                            <li><a href="http://www.eurordis.org/es/content/un-nuevo-registro-para-las-diabetes-raras">EURORDIS – Un nuevo registro para las diabetes raras</a></li>
-                            <li><a href="http://www.euro-wabb.org/es/">EURO-WABB</a></li>
-                        </ul>
                     </div>
-                </div>
-                <div class="col-sm-3 col-lg-3">
-                    <div class="widget">
-                        <h4>Idioma</h4>
-                        <!--   <div class="form-group multiple-form-group input-group">
+                    <div class="col-sm-3 col-lg-3">
+                        <div class="widget">
+                            <h4>Páginas relacionadas</h4>
+                            <ul class="link-list">
+                                <li><a href="http://www.orpha.net/consor/cgi-bin/OC_Exp.php?lng=ES&Expert=3463.0">ORPHANET – Síndrome de Wolfram</a></li>
+                                <li><a href="http://www.association-du-syndrome-de-wolfram.org/faire-un-don.html">Asociación Francesa del síndrome de Wolfram</a></li>
+                                <li><a href="http://wolframsyndrome.dom.wustl.edu/">Universidad de Washington en St. Louis – Síndrome de Wolfram</a></li>
+                                <li><a href="http://aswolfram.org/">Asociación Española para la Investigación y Ayuda al síndrome de Wolfram</a></li>
+                                <li><a href="http://www.eurordis.org/es/content/un-nuevo-registro-para-las-diabetes-raras">EURORDIS – Un nuevo registro para las diabetes raras</a></li>
+                                <li><a href="http://www.euro-wabb.org/es/">EURO-WABB</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-lg-3">
+                        <div class="widget">
+                            <h4>Idioma</h4>
+                            <!--   <div class="form-group multiple-form-group input-group">
                         <input type="email" name="email" class="form-control">
                         <span class="input-group-btn">
                             <button type="button" class="btn btn-theme btn-add">Subscribe</button>
                         </span>
                     </div>  -->
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
             <div id="sub-footer">
                 <div class="container">
                     <div class="row">
@@ -182,29 +182,29 @@
                                 </div>
                             </div>
                         </div>
-     
-        </div>
-        </div>
-        </div>
-    </footer>
+
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
     <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
 
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/modernizr.custom.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="plugins/flexslider/jquery.flexslider-min.js"></script>
-    <script src="plugins/flexslider/flexslider.config.js"></script>
-    <script src="js/jquery.appear.js"></script>
-    <script src="js/stellar.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/uisearch.js"></script>
-    <script src="js/jquery.cubeportfolio.min.js"></script>
-    <script src="js/google-code-prettify/prettify.js"></script>
-    <script src="js/animate.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/modernizr.custom.js"></script>
+    <script src="/js/jquery.easing.1.3.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/plugins/flexslider/jquery.flexslider-min.js"></script>
+    <script src="/plugins/flexslider/flexslider.config.js"></script>
+    <script src="/js/jquery.appear.js"></script>
+    <script src="/js/stellar.js"></script>
+    <script src="/js/classie.js"></script>
+    <script src="/js/uisearch.js"></script>
+    <script src="/js/jquery.cubeportfolio.min.js"></script>
+    <script src="/js/google-code-prettify/prettify.js"></script>
+    <script src="/js/animate.js"></script>
+    <script src="/js/custom.js"></script>
 </body>
 
 </html>
