--- a/WADWolfram/src/main/resources/templates/index.html
+++ b/WADWolfram/src/main/resources/templates/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Wolfram.org" />
     <!-- css -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="plugins/flexslider/flexslider.css" rel="stylesheet" media="screen" />
-    <link href="css/cubeportfolio.min.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/plugins/flexslider/flexslider.css" rel="stylesheet" media="screen" />
+    <link href="/css/cubeportfolio.min.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
 
     <!-- Theme skin -->
-    <link id="t-colors" href="skins/default.css" rel="stylesheet" />
+    <link id="t-colors" href="/skins/default.css" rel="stylesheet" />
 
     <!-- boxed bg -->
-    <link id="bodybg" href="bodybg/bg1.css" rel="stylesheet" type="text/css" />
+    <link id="bodybg" href="/bodybg/bg1.css" rel="stylesheet" type="text/css" />
 
     <!-- =======================================================
     Author: Group13. 2017
@@ -36,7 +36,7 @@
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
+                            <a class="navbar-brand" href="index.html"><img src="/img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
                         </div>
                         <div class="navbar-collapse collapse ">
                             <ul class="nav navbar-nav">
@@ -76,7 +76,7 @@
                         <div id="main-slider" class="main-slider flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="fotos/fumiurano.jpg" alt="Foto del proyecto" />
+                                    <img src="/fotos/fumiurano.jpg" alt="Foto del proyecto" />
                                     <div class="flex-caption">
                                         <h3>Ensayo clínico del Dr. Fumihiko Urano</h3>
                                         <p>Consiste en determinar la seguridad y efectividad de un medicamento para las personas con síndrome de Wolfram con la finalidad de retrasar la progresión de dicho síndrome.</p>
@@ -84,7 +84,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="fotos/timothy barret.jpg" alt="Foto del proyecto" />
+                                    <img src="/fotos/timothy barret.jpg" alt="Foto del proyecto" />
                                     <div class="flex-caption">
                                         <h3>Ensayo clínico liderado por Dr. Timothy Barrett</h3>
                                         <p>Consiste en valorar la seguridad y efectividad de un principio activo en pacientes diagnosticados de síndrome de Wolfram mediante la puesta en marcha del ensayo clínico.</p>
@@ -92,7 +92,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="fotos/pacientes.jpg" alt="Foto del proyecto" />
+                                    <img src="/fotos/pacientes.jpg" alt="Foto del proyecto" />
                                     <div class="flex-caption">
                                         <h3>Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Investigación en Salud</h3>
                                         <p>Estudio del fenotipo clínico y curso evolutivo de los pacientes españoles con Síndrome de Wolfram.</p>
@@ -100,7 +100,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="fotos/psicologa.jpg" alt="Foto del proyecto" />
+                                    <img src="/fotos/psicologa.jpg" alt="Foto del proyecto" />
                                     <div class="flex-caption">
                                         <h3>Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares</h3>
                                         <p>Consiste en dar una atención e intervención bio-psicosocial que mejore la calidad de vida de las personas afectadas y de sus familiares.</p>
@@ -158,15 +158,15 @@
                                     <h4 class="widgetheading">Noticias de interés</h4>
                                     <ul class="recent">
                                         <li>
-                                            <a href="blog.html#sindromeWolfram"> <img src="fotos/libropeque.jpg" class="pull-left" alt="Foto de la noticia" /></a>
+                                            <a href="blog.html#sindromeWolfram"> <img src="/fotos/libropeque.jpg" class="pull-left" alt="Foto de la noticia" /></a>
                                             <h6><a href="blog.html#sindromeWolfram">¿En qué consiste el síndrome de Wolfram?</a></h6>
                                         </li>
                                         <li>
-                                            <a href="blog.html#actividades"> <img src="fotos/medicospeque.jpg" class="pull-left" alt="Foto de la noticia" /></a>
+                                            <a href="blog.html#actividades"> <img src="/fotos/medicospeque.jpg" class="pull-left" alt="Foto de la noticia" /></a>
                                             <h6><a href="blog.html#actividades">Actividades realizadas por la asociación</a></h6>
                                         </li>
                                         <li>
-                                            <a href="blog.html#anulacion"> <img src="fotos/noticiapeque.jpg" class="pull-left" alt="Foto de la noticia" /></a>
+                                            <a href="blog.html#anulacion"> <img src="/fotos/noticiapeque.jpg" class="pull-left" alt="Foto de la noticia" /></a>
                                             <h6><a href="blog.html#anulacion">Anulación de la unidad multidisciplinar de Wolfram</a></h6>
                                         </li>
                                     </ul>
@@ -253,20 +253,20 @@
     <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
 
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/modernizr.custom.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="plugins/flexslider/jquery.flexslider-min.js"></script>
-    <script src="plugins/flexslider/flexslider.config.js"></script>
-    <script src="js/jquery.appear.js"></script>
-    <script src="js/stellar.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/uisearch.js"></script>
-    <script src="js/jquery.cubeportfolio.min.js"></script>
-    <script src="js/google-code-prettify/prettify.js"></script>
-    <script src="js/animate.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/modernizr.custom.js"></script>
+    <script src="/js/jquery.easing.1.3.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/plugins/flexslider/jquery.flexslider-min.js"></script>
+    <script src="/plugins/flexslider/flexslider.config.js"></script>
+    <script src="/js/jquery.appear.js"></script>
+    <script src="/js/stellar.js"></script>
+    <script src="/js/classie.js"></script>
+    <script src="/js/uisearch.js"></script>
+    <script src="/js/jquery.cubeportfolio.min.js"></script>
+    <script src="/js/google-code-prettify/prettify.js"></script>
+    <script src="/js/animate.js"></script>
+    <script src="/js/custom.js"></script>
 </body>
 
 </html>
