--- a/WADWolfram/src/main/resources/templates/login.html
+++ b/WADWolfram/src/main/resources/templates/login.html
@@ -1,49 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<title>WADWolfram - Inicia sesión</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="Bootstrap 3 template for corporate business" />
-<!-- css -->
-<link href="css/bootstrap.min.css" rel="stylesheet" />
-<link href="css/cubeportfolio.min.css" rel="stylesheet" />
-<link href="css/style.css" rel="stylesheet" />
+    <meta charset="utf-8">
+    <title>WADWolfram - Inicia sesión</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Bootstrap 3 template for corporate business" />
+    <!-- css -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/cubeportfolio.min.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
 
 
-<!-- Theme skin -->
-<link id="t-colors" href="skins/default.css" rel="stylesheet" />
+    <!-- Theme skin -->
+    <link id="t-colors" href="/skins/default.css" rel="stylesheet" />
 
-	<!-- boxed bg -->
-	<link id="bodybg" href="bodybg/bg1.css" rel="stylesheet" type="text/css" />
+    <!-- boxed bg -->
+    <link id="bodybg" href="/bodybg/bg1.css" rel="stylesheet" type="text/css" />
 
-<!-- =======================================================
+    <!-- =======================================================
     Author: Group13. 2017
 ======================================================= -->
 </head>
+
 <body>
 
 
 
-<div id="wrapper">
-	<!-- start header -->
-	<header>
-<nav>			
-        <div class="navbar navbar-default navbar-static-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="199" height="52" /></a>
-                </div>
-                <div class="navbar-collapse collapse ">
-                    <ul class="nav navbar-nav">
-                        <li><a href="index.html">Inicio</a></li>
-                         <li><a href="projects.html">Proyectos</a></li>
-                      <!--  <li class="dropdown">
+    <div id="wrapper">
+        <!-- start header -->
+        <header>
+            <nav>
+                <div class="navbar navbar-default navbar-static-top">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="index.html"><img src="/img/logo.png" alt="" width="199" height="52" /></a>
+                        </div>
+                        <div class="navbar-collapse collapse ">
+                            <ul class="nav navbar-nav">
+                                <li><a href="index.html">Inicio</a></li>
+                                <li><a href="projects.html">Proyectos</a></li>
+                                <!--  <li class="dropdown">
                             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Proyectos <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="newProyects.html">Proyectos Nuevos</a></li>
@@ -58,81 +60,84 @@
 								</li>
                             </ul>
                         </li>-->
-                        <li><a href="blog.html">Noticias</a></li>
-							<!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
-                        
-                        <li><a href="contact.html">Contacto</a></li>
-                        <li><a href="about.html">Sobre sus desarrolladores</a></li>
-                        <li class="dropdown active">
-                             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="register.html">Únete</a></li>
-                                <li><a href="login.html">Inicia sesión</a></li>
-                                </ul>
-                        </li>
-                    </ul>
+                                <li><a href="blog.html">Noticias</a></li>
+                                <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
+
+                                <li><a href="contact.html">Contacto</a></li>
+                                <li><a href="about.html">Sobre sus desarrolladores</a></li>
+                                <li class="dropdown active">
+                                    <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="register.html">Únete</a></li>
+                                        <li><a href="login.html">Inicia sesión</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+        <!-- end header -->
+        <section id="inner-headline">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <ul class="breadcrumb">
+                            <li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                            <li>Cuenta</li>
+                            <li class="active">Inicia sesión</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-</nav>
-	</header>
-    
-    	<!-- end header -->
-	<section id="inner-headline">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<ul class="breadcrumb">
-					<li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
-					<li>Cuenta</li><li class="active">Inicia sesión</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	</section>
-	<section id="content">
-<div class="container">
+        </section>
+        <section id="content">
+            <div class="container">
 
-<div class="row">
-    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-		<form role="form" class="register-form">
-            <h2>¡Entra! <small>Participa de forma activa</small></h2>
-			<hr class="colorgraph">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                        <form role="form" class="register-form">
+                            <h2>¡Entra! <small>Participa de forma activa</small></h2>
+                            <hr class="colorgraph">
 
-			<div class="form-group">
-				<input type="email" name="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" tabindex="4">
-			</div>
-			<div class="form-group">
-				<input type="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Contraseña">
-			</div>
+                            <div class="form-group">
+                                <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" tabindex="4">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Contraseña">
+                            </div>
 
-			<div class="row">
-				<div class="col-xs-4 col-sm-3 col-md-3">
-					<span class="button-checkbox">
+                            <div class="row">
+                                <div class="col-xs-4 col-sm-3 col-md-3">
+                                    <span class="button-checkbox">
 						<button type="button" class="btn" data-color="info" tabindex="7">Se me ha olvidado la contraseña</button>
                         <input type="checkbox" name="t_and_c" id="t_and_c" class="hidden" value="1">
 					</span>
-				</div>
-			</div>
-			
-			<hr class="colorgraph">
-			<div class="row">
-				<div class="col-xs-12 col-md-6"><input type="submit" value="Entrar" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
-				<div class="col-xs-12 col-md-6">¿Todavía no tienes una cuenta? <a href="register.html">Únete ya</a></div>
-			</div>
-		</form>
-	</div>
-</div>
+                                </div>
+                            </div>
 
-</div>
-	</section>
+                            <hr class="colorgraph">
+                            <div class="row">
+                                <div class="col-xs-12 col-md-6">
+                                    <input type="submit" value="Entrar" class="btn btn-primary btn-block btn-lg" tabindex="7">
+                                </div>
+                                <div class="col-xs-12 col-md-6">¿Todavía no tienes una cuenta? <a href="register.html">Únete ya</a></div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
 
-	<footer>
-<div class="container">
-		<div class="row">
-			<div class="col-sm-3 col-lg-3">
-				<div class="widget">
-					<h4>Estamos en: </h4>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-3 col-lg-3">
+                        <div class="widget">
+                            <h4>Estamos en: </h4>
                             <address>
 					<strong>Asociación Española para la Investigación y Ayuda al Síndrome de Wolfram</strong><br>
 					 C/ Picadilly, nº 7, Almería, Andalucía</address>
@@ -142,59 +147,59 @@
                                 <i class="icon-envelope-alt"></i> email@domainname.com
                             </p>
 
-				</div>
-			</div>
-			<div class="col-sm-3 col-lg-3">
-				<div class="widget">
-					<h4>Información</h4>
-					<ul class="link-list">
-						<li><a href="#">Términos y condiciones</a></li>
-						<li><a href="#">Política de privacidad</a></li>
-						<li><a href="contact.html">Contáctanos</a></li>
-					</ul>
-				</div>
-				
-			</div>
-			<div class="col-sm-3 col-lg-3">
-				<div class="widget">
-					<h4>Páginas relacionadas</h4>
-					<ul class="link-list">
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-lg-3">
+                        <div class="widget">
+                            <h4>Información</h4>
+                            <ul class="link-list">
+                                <li><a href="#">Términos y condiciones</a></li>
+                                <li><a href="#">Política de privacidad</a></li>
+                                <li><a href="contact.html">Contáctanos</a></li>
+                            </ul>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-3 col-lg-3">
+                        <div class="widget">
+                            <h4>Páginas relacionadas</h4>
+                            <ul class="link-list">
                                 <li><a href="http://www.orpha.net/consor/cgi-bin/OC_Exp.php?lng=ES&Expert=3463.0">ORPHANET – Síndrome de Wolfram</a></li>
                                 <li><a href="http://www.association-du-syndrome-de-wolfram.org/faire-un-don.html">Asociación Francesa del síndrome de Wolfram</a></li>
                                 <li><a href="http://wolframsyndrome.dom.wustl.edu/">Universidad de Washington en St. Louis – Síndrome de Wolfram</a></li>
                                 <li><a href="http://aswolfram.org/">Asociación Española para la Investigación y Ayuda al síndrome de Wolfram</a></li>
                                 <li><a href="http://www.eurordis.org/es/content/un-nuevo-registro-para-las-diabetes-raras">EURORDIS – Un nuevo registro para las diabetes raras</a></li>
                                 <li><a href="http://www.euro-wabb.org/es/">EURO-WABB</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-sm-3 col-lg-3">
-				<div class="widget">
-					<h4>Idioma</h4>
-                 <!--   <div class="form-group multiple-form-group input-group">
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-lg-3">
+                        <div class="widget">
+                            <h4>Idioma</h4>
+                            <!--   <div class="form-group multiple-form-group input-group">
                         <input type="email" name="email" class="form-control">
                         <span class="input-group-btn">
                             <button type="button" class="btn btn-theme btn-add">Subscribe</button>
                         </span>
                     </div>-->
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="sub-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="copyright">
-						<p>&copy; Sailor Theme - All Right Reserved</p>
-                        <div class="credits">
-                          
-                            <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
                         </div>
- 				</div>
+                    </div>
+                </div>
+            </div>
+            <div id="sub-footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="copyright">
+                                <p>&copy; Sailor Theme - All Right Reserved</p>
+                                <div class="credits">
 
-				</div>
-				<!--<div class="col-lg-6">
+                                    <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <!--<div class="col-lg-6">
 					<ul class="social-network">
 						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
@@ -203,29 +208,30 @@
 						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
 					</ul>
 				</div>-->
-			</div>
-		</div>
-	</div>
-	</footer>
-	
-</div>
-<a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
-<!-- javascript
-    ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="js/jquery.min.js"></script>
-<script src="js/modernizr.custom.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.appear.js"></script>
-<script src="js/stellar.js"></script>
-<script src="js/classie.js"></script>
-<script src="js/uisearch.js"></script>
-<script src="js/jquery.cubeportfolio.min.js"></script>
-<script src="js/google-code-prettify/prettify.js"></script>
-<script src="js/animate.js"></script>
-<script src="js/custom.js"></script>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
-	
+    </div>
+    <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
+    <!-- javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/modernizr.custom.js"></script>
+    <script src="/js/jquery.easing.1.3.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.appear.js"></script>
+    <script src="/js/stellar.js"></script>
+    <script src="/js/classie.js"></script>
+    <script src="/js/uisearch.js"></script>
+    <script src="/js/jquery.cubeportfolio.min.js"></script>
+    <script src="/js/google-code-prettify/prettify.js"></script>
+    <script src="/js/animate.js"></script>
+    <script src="/js/custom.js"></script>
+
+
 </body>
+
 </html>
