--- a/WADWolfram/src/main/resources/templates/oneProject.html
+++ b/WADWolfram/src/main/resources/templates/oneProject.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Wolfram.org" />
     <!-- css -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="plugins/flexslider/flexslider.css" rel="stylesheet" media="screen" />
-    <link href="css/cubeportfolio.min.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/user.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/plugins/flexslider/flexslider.css" rel="stylesheet" media="screen" />
+    <link href="/css/cubeportfolio.min.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
+    <link href="/css/user.css" rel="stylesheet" />
 
     <!-- Theme skin -->
-    <link id="t-colors" href="skins/default.css" rel="stylesheet" />
+    <link id="t-colors" href="/skins/default.css" rel="stylesheet" />
 
     <!-- boxed bg -->
-    <link id="bodybg" href="bodybg/bg1.css" rel="stylesheet" type="text/css" />
+    <link id="bodybg" href="/bodybg/bg1.css" rel="stylesheet" type="text/css" />
 
-    <script src="js/user.js"></script>
+    <script src="/js/user.js"></script>
 
 </head>
 
@@ -61,7 +61,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="199" height="52" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="/img/logo.png" alt="" width="199" height="52" /></a>
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
@@ -95,7 +95,7 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div id="profilePhoto">
-                                                <img src="img/dummies/img4.jpg" id="proyectImage" class="img-responsive" />
+                                                <img src="/img/dummies/img4.jpg" id="proyectImage" class="img-responsive" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -233,20 +233,20 @@
     <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
 
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/modernizr.custom.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="plugins/flexslider/jquery.flexslider-min.js"></script>
-    <script src="plugins/flexslider/flexslider.config.js"></script>
-    <script src="js/jquery.appear.js"></script>
-    <script src="js/stellar.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/uisearch.js"></script>
-    <script src="js/jquery.cubeportfolio.min.js"></script>
-    <script src="js/google-code-prettify/prettify.js"></script>
-    <script src="js/animate.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/modernizr.custom.js"></script>
+    <script src="/js/jquery.easing.1.3.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/plugins/flexslider/jquery.flexslider-min.js"></script>
+    <script src="/plugins/flexslider/flexslider.config.js"></script>
+    <script src="/js/jquery.appear.js"></script>
+    <script src="/js/stellar.js"></script>
+    <script src="/js/classie.js"></script>
+    <script src="/js/uisearch.js"></script>
+    <script src="/js/jquery.cubeportfolio.min.js"></script>
+    <script src="/js/google-code-prettify/prettify.js"></script>
+    <script src="/js/animate.js"></script>
+    <script src="/js/custom.js"></script>
 
 
 </body>
