--- a/WADWolfram/src/main/resources/templates/projects.html
+++ b/WADWolfram/src/main/resources/templates/projects.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bootstrap 3 template for corporate business" />
     <!-- css -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/cubeportfolio.min.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/cubeportfolio.min.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
 
 
     <!-- Theme skin -->
-    <link id="t-colors" href="skins/default.css" rel="stylesheet" />
+    <link id="t-colors" href="/skins/default.css" rel="stylesheet" />
 
 
     <!-- boxed bg -->
-    <link id="bodybg" href="bodybg/bg1.css" rel="stylesheet" type="text/css" />
+    <link id="bodybg" href="/bodybg/bg1.css" rel="stylesheet" type="text/css" />
 
     <!-- =======================================================
     Author: Group13. 2017
@@ -57,7 +57,7 @@
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="/img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
@@ -77,12 +77,14 @@
                     </div>
                 </div>
             </div>
-            
-             <section id="inner-headline">
+
+            <section id="inner-headline">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <br><br><br>
+                            <br>
+                            <br>
+                            <br>
                             <!--               <ul class="breadcrumb">
                            <li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
                                 <li><a href="projects.html">Proyectos</a></li>
@@ -92,7 +94,7 @@
                     </div>
                 </div>
             </section>
-            
+
         </header>
 
         <!-- end header -->
@@ -101,7 +103,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h4  class="heading">Nuestros proyectos</h4>
+                        <h4 class="heading">Nuestros proyectos</h4>
 
                         <div id="filters-container" class="cbp-l-filters-button">
                             <div data-filter="*" class="cbp-filter-item-active cbp-filter-item">Todos
@@ -126,16 +128,16 @@
                         <div id="grid-container" class="cbp-l-grid-projects">
                             <ul>
                                 <li class="cbp-item graphic">
-                                    
+
                                     <div class="cbp-caption">
                                         <div class="cbp-caption-defaultWrap">
-                                            <img src="fotos/fumi.jpg" alt="foto del proyecto 1" />
+                                            <img src="/fotos/fumi.jpg" alt="foto del proyecto 1" />
                                         </div>
-                                    
+
                                         <div class="cbp-caption-activeWrap">
                                             <div class="cbp-l-caption-alignCenter">
                                                 <div class="cbp-l-caption-body">
-                                                   <a href="project_fumi.html" class="cbp-l-caption-buttonRight" data-title="Proyecto 1<br>Fecha lanzamiento">Leer más</a>
+                                                    <a href="project_fumi.html" class="cbp-l-caption-buttonRight" data-title="Proyecto 1<br>Fecha lanzamiento">Leer más</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -144,11 +146,11 @@
                                     <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
 
                                 </li>
-                                
+
                                 <li class="cbp-item web-design">
                                     <div class="cbp-caption">
                                         <div class="cbp-caption-defaultWrap">
-                                            <img src="fotos/tim.jpg" alt="foto del proyecto 2" />
+                                            <img src="/fotos/tim.jpg" alt="foto del proyecto 2" />
                                         </div>
                                         <div class="cbp-caption-activeWrap">
                                             <div class="cbp-l-caption-alignCenter">
@@ -161,11 +163,11 @@
                                     <div class="cbp-l-grid-projects-title">Ensayo clínico liderado por Dr. Timothy Barrett</div>
                                     <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
                                 </li>
-                                
+
                                 <li class="cbp-item graphic">
                                     <div class="cbp-caption">
                                         <div class="cbp-caption-defaultWrap">
-                                            <img src="fotos/revisiones.jpg" alt="foto del proyecto 3" />
+                                            <img src="/fotos/revisiones.jpg" alt="foto del proyecto 3" />
                                         </div>
                                         <div class="cbp-caption-activeWrap">
                                             <div class="cbp-l-caption-alignCenter">
@@ -179,29 +181,29 @@
                                     <div class="cbp-l-grid-projects-title">Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud</div>
                                     <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
                                 </li>
-                                
+
                                 <li class="cbp-item graphic">
                                     <div class="cbp-caption">
                                         <div class="cbp-caption-defaultWrap">
-                                            <img src="fotos/luz.jpg" alt="foto del proyecto 4" />
+                                            <img src="/fotos/luz.jpg" alt="foto del proyecto 4" />
                                         </div>
                                         <div class="cbp-caption-activeWrap">
                                             <div class="cbp-l-caption-alignCenter">
                                                 <div class="cbp-l-caption-body">
-                                                   <a href="project_psicosocial.html" class="cbp-l-caption-buttonRight" data-title="Proyecto 4<br>fecha lanzamiento">Leer más</a>
+                                                    <a href="project_psicosocial.html" class="cbp-l-caption-buttonRight" data-title="Proyecto 4<br>fecha lanzamiento">Leer más</a>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="cbp-l-grid-projects-title">Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares</div>
-                                    <div class="cbp-l-grid-projects-desc" >Fecha lanzamiento</div>
+                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
                                 </li>
 
                             </ul>
                         </div>
 
                         <div class="cbp-l-loadMore-button">
-                          <!--  <a href="ajax/loadMore.html" class="cbp-l-loadMore-button-link">Cargar más</a> -->
+                            <!--  <a href="ajax/loadMore.html" class="cbp-l-loadMore-button-link">Cargar más</a> -->
                             <a href="#" class="cbp-l-loadMore-button-link">Cargar más</a>
                         </div>
                     </div>
@@ -283,18 +285,18 @@
     <!-- javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/modernizr.custom.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.appear.js"></script>
-    <script src="js/stellar.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/uisearch.js"></script>
-    <script src="js/jquery.cubeportfolio.min.js"></script>
-    <script src="js/google-code-prettify/prettify.js"></script>
-    <script src="js/animate.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/modernizr.custom.js"></script>
+    <script src="/js/jquery.easing.1.3.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.appear.js"></script>
+    <script src="/js/stellar.js"></script>
+    <script src="/js/classie.js"></script>
+    <script src="/js/uisearch.js"></script>
+    <script src="/js/jquery.cubeportfolio.min.js"></script>
+    <script src="/js/google-code-prettify/prettify.js"></script>
+    <script src="/js/animate.js"></script>
+    <script src="/js/custom.js"></script>
 
 
 </body>
