some routes changed

--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
@@ -8,24 +8,24 @@
     <link data-brackets-id='123' href="https://code.jquery.com/ui/1.10.3/themes/redmond/jquery-ui.css" rel="stylesheet" media="screen">
 
     <!-- Bootstrap -->
-    <link data-brackets-id='124' href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link data-brackets-id='125' href="vendors/fullcalendar/fullcalendar.css" rel="stylesheet" media="screen">
+    <link data-brackets-id='124' href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link data-brackets-id='125' href="/vendors/fullcalendar/fullcalendar.css" rel="stylesheet" media="screen">
     <!-- styles -->
-    <link data-brackets-id='126' href="css/styles.css" rel="stylesheet">
+    <link data-brackets-id='126' href="/css/styles.css" rel="stylesheet">
 
-    <link data-brackets-id='127' href="css/calendar.css" rel="stylesheet">
+    <link data-brackets-id='127' href="/css/calendar.css" rel="stylesheet">
 
     <!------------------------------------------------------------------------->
-    <link data-brackets-id='128' href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link data-brackets-id='129' href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-    <link data-brackets-id='130' href="filtros/assets/styles.css" rel="stylesheet" media="screen">
-    <link data-brackets-id='131' href="filtros/assets/DT_bootstrap.css" rel="stylesheet" media="screen">
+    <link data-brackets-id='128' href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link data-brackets-id='129' href="/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+    <link data-brackets-id='130' href="/filtros/assets/styles.css" rel="stylesheet" media="screen">
+    <link data-brackets-id='131' href="/filtros/assets/DT_bootstrap.css" rel="stylesheet" media="screen">
     <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="vendors/flot/excanvas.min.js"></script><![endif]-->
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
-    <script data-brackets-id='132' src="filtros/vendors/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    <script data-brackets-id='132' src="/filtros/vendors/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
 
 
@@ -169,21 +169,21 @@
 
 
 
-    <link data-brackets-id='228' href="filtros/vendors/datatables/dataTables.bootstrap.css" rel="stylesheet" media="screen">
+    <link data-brackets-id='228' href="/filtros/vendors/datatables/dataTables.bootstrap.css" rel="stylesheet" media="screen">
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script data-brackets-id='229' src="https://code.jquery.com/jquery.js"></script>
     <!-- jQuery UI -->
     <script data-brackets-id='230' src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script data-brackets-id='231' src="filtros/bootstrap/js/bootstrap.min.js"></script>
+    <script data-brackets-id='231' src="/filtros/bootstrap/js/bootstrap.min.js"></script>
 
-    <script data-brackets-id='232' src="filtros/vendors/datatables/js/jquery.dataTables.min.js"></script>
+    <script data-brackets-id='232' src="/filtros/vendors/datatables/js/jquery.dataTables.min.js"></script>
 
-    <script data-brackets-id='233' src="filtros/vendors/datatables/dataTables.bootstrap.js"></script>
+    <script data-brackets-id='233' src="/filtros/vendors/datatables/dataTables.bootstrap.js"></script>
 
-    <script data-brackets-id='234' src="js/custom.js"></script>
-    <script data-brackets-id='235' src="js/tables.js"></script>
+    <script data-brackets-id='234' src="/js/custom.js"></script>
+    <script data-brackets-id='235' src="/js/tables.js"></script>
 
 
 
