--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
@@ -8,12 +8,12 @@
     <link href="https://code.jquery.com/ui/1.10.3/themes/redmond/jquery-ui.css" rel="stylesheet" media="screen">
 
     <!-- Bootstrap -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="vendors/fullcalendar/fullcalendar.css" rel="stylesheet" media="screen">
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendors/fullcalendar/fullcalendar.css" rel="stylesheet" media="screen">
     <!-- styles -->
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
 
-    <link href="css/calendar.css" rel="stylesheet">
+    <link href="/css/calendar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -238,12 +238,12 @@
     <!-- jQuery UI -->
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
 
-    <script src="vendors/fullcalendar/fullcalendar.js"></script>
-    <script src="vendors/fullcalendar/gcal.js"></script>
-    <script src="js/custom.js"></script>
-    <script src="js/calendar.js"></script>
+    <script src="/vendors/fullcalendar/fullcalendar.js"></script>
+    <script src="/vendors/fullcalendar/gcal.js"></script>
+    <script src="/js/custom.js"></script>
+    <script src="/js/calendar.js"></script>
 </body>
 
 </html>
