--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -69,7 +69,7 @@
                     <ul class="nav ">
                         <!-- Main menu -->
                         <li><a href="index.html "><i class="glyphicon glyphicon-home "></i> Inicio</a></li>
-                        <li class="current"><a href="addproject.html "><i class="glyphicon glyphicon-pencil "></i> Añadir Proyecto</a></li>
+                        <li class="current"><a href="addproject.html "><i class="glyphicon glyphicon-pencil "></i>Añadir Proyecto</a></li>
                         <li><a href="donations.html "><i class="glyphicon glyphicon-euro"></i> Donaciones</a></li>
                         <li><a href="addblog.html "><i class="glyphicon glyphicon-tasks "></i> Añadir Noticia</a></li>
                         <li class="submenu ">
@@ -92,7 +92,7 @@
                     <div class="col-md-12">
                         <div class="content-box-large">
                             <div class="panel-heading">
-                                <div class="panel-title">Añadir Proyecto</div>
+                                <div class="panel-title"><h2>Añadir Proyecto</h2></div>
 
                                 <div class="panel-options">
                                     <a href="#" data-rel="collapse"><i class="glyphicon glyphicon-refresh"></i></a>
@@ -100,25 +100,48 @@
                                 </div>
                             </div>
                             <div class="panel-body">
-                                <form class="form-horizontal" role="form">
+                                <form class="form-horizontal" role="form" action="/proyectos_controller">
                                     <div class="form-group">
                                         <label for="inputEmail3" class="col-sm-2 control-label">Nombre del proyecto</label>
-                                        <div class="col-sm-10">
-                                            <input type="text" class="form-control" id="inputEmail3" placeholder="Nombre">
+                                       <div class="col-sm-10">
+                                            <input type="text" class="form-control" id="inputEmail3" placeholder="Nombre" name="titulo">
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="inputEmail3" class="col-sm-2 control-label">Fecha límite</label>
+                                        <label for="inputEmail3" class="col-sm-2 control-label">Fecha de lanzamiento</label>
                                         <div class="col-sm-10">
-                                            <input type="date" class="form-control" id="inputEmail3" placeholder="Fecha">
+                                            <input type="date" class="form-control" id="inputEmail3" placeholder="Fecha" name="fecha">
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="inputPassword3" class="col-sm-2 control-label">Dinero necesario</label>
+                                        <label for="inputPassword3" class="col-sm-2 control-label">Presupuesto total</label>
                                         <div class="col-sm-10">
-                                            <input type="number" class="form-control" id="inputPassword3" placeholder="€">
+                                            <input type="number" class="form-control" id="inputPassword3" placeholder="€" name="presupuesto_total">
                                         </div>
                                     </div>
+
+                                    <div class="form-group">
+                                        <label for="inputPassword3" class="col-sm-2 control-label">Presupuesto concedido</label>
+                                        <div class="col-sm-10">
+                                            <input type="number" class="form-control" id="inputPassword3" placeholder="€" name="presupuesto_concedido">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="inputPassword3" class="col-sm-2 control-label">Duracion del proyecto</label>
+                                        <div class="col-sm-10">
+                                            <input type="number" class="form-control" id="inputPassword3" placeholder="Duracion en meses" name="duracion">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="inputPassword3" class="col-sm-2 control-label">Año previsto de inicio</label>
+                                        <div class="col-sm-10">
+                                            <input type="number" class="form-control" id="inputPassword3" placeholder="Año">
+                                        </div>
+                                    </div>
+
+
                                     <div class="form-group">
                                         <label class="col-md-2 control-label">Imagen del proyecto</label>
                                         <div class="col-md-10">
@@ -128,15 +151,15 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="col-sm-2 control-label">Descripción corta</label>
+                                        <label class="col-sm-2 control-label">Descripción breve</label>
                                         <div class="col-sm-10">
-                                            <textarea class="form-control" placeholder="Descripción corta" rows="2"></textarea>
+                                            <textarea class="form-control" placeholder="Descripción" rows="2" name="descripcion"></textarea>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="col-sm-2 control-label">Descripción completa</label>
+                                        <label class="col-sm-2 control-label">Información completa</label>
                                         <div class="col-sm-10">
-                                            <textarea class="form-control" placeholder="Descripción completa" rows="6"></textarea>
+                                            <textarea class="form-control" placeholder="Descripción completa" rows="6" name="informacion"></textarea>
                                         </div>
                                     </div>
 
