CSS and JS links fixed (Admin module)

--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
@@ -8,11 +8,11 @@
     <link href="https://code.jquery.com/ui/1.10.3/themes/redmond/jquery-ui.css" rel="stylesheet" media="screen">
 
     <!-- Bootstrap -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/Bootstrap-Admin-Theme/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- styles -->
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="/Bootstrap-Admin-Theme/css/styles.css" rel="stylesheet">
 
-    <link href="css/stats.css" rel="stylesheet">
+    <link href="/Bootstrap-Admin-Theme/css/stats.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -228,24 +228,24 @@
     <!-- jQuery UI -->
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="/Bootstrap-Admin-Theme/bootstrap/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="vendors/morris/morris.css">
+    <link rel="stylesheet" href="/Bootstrap-Admin-Theme/vendors/morris/morris.css">
 
 
-    <script src="vendors/jquery.knob.js"></script>
-    <script src="vendors/raphael-min.js"></script>
-    <script src="vendors/morris/morris.min.js"></script>
+    <script src="/Bootstrap-Admin-Theme/vendors/jquery.knob.js"></script>
+    <script src="/Bootstrap-Admin-Theme/vendors/raphael-min.js"></script>
+    <script src="/Bootstrap-Admin-Theme/vendors/morris/morris.min.js"></script>
 
-    <script src="vendors/flot/jquery.flot.js"></script>
-    <script src="vendors/flot/jquery.flot.categories.js"></script>
-    <script src="vendors/flot/jquery.flot.pie.js"></script>
-    <script src="vendors/flot/jquery.flot.time.js"></script>
-    <script src="vendors/flot/jquery.flot.stack.js"></script>
-    <script src="vendors/flot/jquery.flot.resize.js"></script>
+    <script src="/Bootstrap-Admin-Theme/vendors/flot/jquery.flot.js"></script>
+    <script src="/Bootstrap-Admin-Theme/vendors/flot/jquery.flot.categories.js"></script>
+    <script src="/Bootstrap-Admin-Theme/vendors/flot/jquery.flot.pie.js"></script>
+    <script src="/Bootstrap-Admin-Theme/vendors/flot/jquery.flot.time.js"></script>
+    <script src="/Bootstrap-Admin-Theme/vendors/flot/jquery.flot.stack.js"></script>
+    <script src="/Bootstrap-Admin-Theme/vendors/flot/jquery.flot.resize.js"></script>
 
-    <script src="js/custom.js"></script>
-    <script src="js/stats.js"></script>
+    <script src="/Bootstrap-Admin-Theme/js/custom.js"></script>
+    <script src="/Bootstrap-Admin-Theme/js/stats.js"></script>
 </body>
 
 </html>
