--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
@@ -7,10 +7,10 @@
 
     <link href="https://code.jquery.com/ui/1.10.3/themes/redmond/jquery-ui.css" rel="stylesheet" media="screen">
     <!-- Bootstrap -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/Bootstrap-Admin-Theme/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- styles -->
-    <link href="css/styles.css" rel="stylesheet">
-    <link href="css/stats.css" rel="stylesheet">
+    <link href="/Bootstrap-Admin-Theme/css/styles.css" rel="stylesheet">
+    <link href="/Bootstrap-Admin-Theme/css/stats.css" rel="stylesheet">
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -103,7 +103,7 @@
                     </div>
                     <div class="panel-body ">
                         <div id="hero-graph " style="height: 230px; ">
-                            <img src="images/basurainfinita.png" />
+                            <img src="/Bootstrap-Admin-Theme/images/basurainfinita.png" />
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                             </div>
                             <div class="panel-body">
                                 <div id="hero-area" style="height: 230px;">
-                                    <img src="images/basurainfinita2.png" />
+                                    <img src="/Bootstrap-Admin-Theme/images/basurainfinita2.png" />
                                 </div>
                             </div>
                         </div>
@@ -145,8 +145,8 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="/Bootstrap-Admin-Theme/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/Bootstrap-Admin-Theme/js/custom.js"></script>
 </body>
 
 </html>
