--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/profile.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/profile.html
@@ -8,10 +8,10 @@
     <link href="https://code.jquery.com/ui/1.10.3/themes/redmond/jquery-ui.css" rel="stylesheet" media="screen">
 
     <!-- Bootstrap -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/Bootstrap-Admin-Theme/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- styles -->
-    <link href="css/styles.css" rel="stylesheet">
-    <link href="css/forms.css" rel="stylesheet">
+    <link href="/Bootstrap-Admin-Theme/css/styles.css" rel="stylesheet">
+    <link href="/Bootstrap-Admin-Theme/css/forms.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -198,21 +198,21 @@
         </div>
     </footer>
 
-    <link href="vendors/datatables/dataTables.bootstrap.css" rel="stylesheet" media="screen">
+    <link href="/Bootstrap-Admin-Theme/vendors/datatables/dataTables.bootstrap.css" rel="stylesheet" media="screen">
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- jQuery UI -->
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="/Bootstrap-Admin-Theme/bootstrap/js/bootstrap.min.js"></script>
 
-    <script src="vendors/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="/Bootstrap-Admin-Theme/vendors/datatables/js/jquery.dataTables.min.js"></script>
 
-    <script src="vendors/datatables/dataTables.bootstrap.js"></script>
+    <script src="/Bootstrap-Admin-Theme/vendors/datatables/dataTables.bootstrap.js"></script>
 
-    <script src="js/custom.js"></script>
-    <script src="js/tables.js"></script>
+    <script src="/Bootstrap-Admin-Theme/js/custom.js"></script>
+    <script src="/Bootstrap-Admin-Theme/js/tables.js"></script>
 </body>
 
 </html>
