added Donaciones.java to entidades folder
Donaciones class entity

--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
@@ -106,7 +106,7 @@
 								<th data-brackets-id='189'>Nombre del proyecto</th>
                                 <th data-brackets-id='190'>Nombre del usuario</th>
                                 <th data-brackets-id='191'>Cantidad donada - €</th>
-                                <th data-brackets-id='192'>Fecha de donación</th>
+                                <th data-brackets-id='192' id="fecha">Fecha de donación</th>
 							</tr>
 						</thead>
 						<tbody data-brackets-id='193'>
